<?xml version="1.0"?>
<package format="2">
  <name>fd_exoskeleton</name>
  <version>1.0.0</version>
  <description>The fd_exoskeleton package</description>

  <maintainer email="shupeixuan@qq.com">shupeixuan</maintainer>

  <license>BSD-3-Clause</license>
    
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python</exec_depend>
  <exec_depend>rospy</exec_depend>

  <depend>unitree_legged_msgs</depend>
  <depend>genmsg</depend>
</package>